# therma_sim

./: .gitignore  README.md  environment.yaml  pyproject.toml  setup.py
src/therma_sim/: TPC.py  agents.drawio  agents.py  behavior.py  birth.py  birth_death.py  data_logger.py  get_data.ipynb  get_thermal_data.py  ibutton_main_database.ipynb  interaction.py  landscape.py  make_configs.py  metabolism.ipynb  metabolism.py  metabolism_scratch.ipynb  model.py  post_sim.ipynb  post_sim_analysis_scratch.ipynb  run_model.py  run_model_simple.py  scratch_code.ipynb  sim_config.json  stability_analysis.py  test.job  test.yaml  to-do-notes.txt  tpc.ipynb  utility_functions.py  utility_softmax_lookup.py
src/therma_sim/Notes/: Interaction.md  krat_movement.md  snake_movement.md
src/therma_sim/retired_scripts/: organism.py  spatially_explicit_landscape.py  spatially_implicit_landscape.py
sub_model_examples/: metabolism.html  metabolism.qmd  thermoregulation_ct.html  thermoregulation_ct.qmd  utility_and_behavior.html  utility_and_behavior.qmd
tests/: empty_landscape.py  test_agents.py  test_interaction.py  test_landscape.py  test_metabolism.py  test_model.py
tests/Data/: thermal_db.csv
