[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pyright]
typeCheckingMode = "off"

[project]
name = "ThermaSim"
version = "0.0.1"
authors = [
  { name="Michael Remington", email="michaelremington2@gmail.com" },
  { name="Jeet Sukumaran", email="jsukumaran@sdsu.edu" }
]
description = "Therma sim is a network based agent based simulator to study predator prey interactions."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
license = { file = "LICENSE.txt" }

[project.urls]
"Homepage" = "https://github.com/michaelremington2/therma_sim"


[tool.pytest.ini_options]
pythonpaths = ["src"]



